staging/src/slime.io/slime/modules/limiter/install/rls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rate-limit-redis
  name: rate-limit-redis
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limit-redis
  template:
    metadata:
      labels:
        app: rate-limit-redis
    spec:
      containers:
      - env:
        - name: MASTER
          value: "true"
        image: redis:5
        imagePullPolicy: IfNotPresent
        name: redis
        ports:
        - containerPort: 6379
          protocol: TCP
        volumeMounts:
        - mountPath: /redis-master-data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rate-limit-redis
  name: rate-limit-redis
  namespace: istio-system
spec:
  ports:
  - name: one-redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: rate-limit-redis
  type: ClusterIP


# rls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rate-limit
  name: rate-limit
  namespace: istio-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rate-limit
  template:
    metadata:
      labels:
        app: rate-limit
    spec:
      containers:
      - command:
        - /bin/ratelimit
        image: slimeio/ratelimit:v1.0
        imagePullPolicy: IfNotPresent
        name: rate-limit
        volumeMounts:
        - mountPath: /data/ratelimit/config
          name: rate-limit-config
      volumes:
      - configMap:
          defaultMode: 420
          name: rate-limit-config
        name: rate-limit-config

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rate-limit
    release: istio-system-rls
  name: rate-limit
  namespace: istio-system
spec:
  ports:
  - name: grpc
    port: 18081
    protocol: TCP
    targetPort: 18081
  - name: config-grpc
    port: 16071
    protocol: TCP
    targetPort: 6071
  selector:
    app: rate-limit
  type: ClusterIP
